# ipo-radar

./: .env.example  .gitignore  CONFIGURATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_TEST_REPORT.md  Dockerfile  Makefile  PRD_IMPLEMENTATION_REPORT.md  PRODUCT_INTRO.md  PROJECT_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  README.md  SETUP_GUIDE.md  alembic.ini  code_quality_fixes.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  requirements.txt  scan_report_20260327_223541.json  scan_report_20260327_225024.json  scan_report_20260327_230015.json  scan_report_20260327_230522.json  task_plan.md  verify_phase1.py
alembic/: env.py
alembic/versions/: fa596dc83a94_initial_migration.py
data/: discovery_universe_cache.json
docs/: API.md  CONFIGURATION_MANUAL.md  DATA_SOURCES.md  DEPLOYMENT.md  LLM_PROVIDER_GUIDE.md  USAGE.md  USER_MANUAL.md
scripts/: fetch_13f_data.py  fetch_news_data.py  fetch_s1_data.py  update_data.py
src/: __init__.py  __main__.py  notifier.py  scheduler.py
src/crawler/: api.py  base.py  earnings_fetcher.py  edgar_monitor.py  holdings_fetcher.py  ipo_calendar.py  market_data.py  news_fetcher.py  s1_parser.py  social_fetcher.py
src/crawler/utils/: rate_limiter.py  retry.py  user_agent.py
src/dashboard/: app.py
src/earnings/: __init__.py  tracker.py
src/lockup/: __init__.py  tracker.py
src/monitoring/: __init__.py  alerter.py  monitor.py
src/pattern/: breakout_scanner.py  indicators.py  ipo_base_detector.py
src/radar/: __init__.py  __main__.py  cli.py  monitor.py
src/scorer/: __init__.py  __main__.py  cli.py  composite.py  daily_scan.py
src/screener/: __main__.py  cli.py  fundamentals.py
src/sentiment/: __init__.py  analyzer.py
src/utils/: __init__.py  batch_processor.py  cache.py
tests/: __init__.py  conftest.py  test_docker.py  test_memory.py  test_monitoring.py  test_notifier.py
tests/crawler/: __init__.py  test_edgar_monitor.py  test_ipo_calendar.py  test_models.py  test_s1_parser.py  test_utils.py
tests/earnings/: __init__.py  test_tracker.py
tests/integration/: test_end_to_end.py
tests/lockup/: __init__.py  test_tracker.py
tests/pattern/: __init__.py  test_breakout_scanner.py  test_indicators.py  test_ipo_base_detector.py
tests/scorer/: __init__.py  test_composite.py  test_daily_scan.py
tests/screener/: __init__.py  test_fundamentals.py
tests/sentiment/: __init__.py  test_analyzer.py
