[tool.poetry]
name = "ipo-radar"
version = "0.1.0"
description = "IPO Decision Intelligence System - IPO新股决策信息系统"
authors = ["IPO-Radar Team <contact@ipo-radar.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Data & HTTP
requests = "^2.31.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
feedparser = "^6.0.0"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.26.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

# Financial Data
yfinance = "^0.2.35"
sec-api = "^1.0.0"

# Dashboard
streamlit = "^1.30.0"
plotly = "^5.18.0"

# AI/NLP
langchain = "^0.1.0"
litellm = "^1.0.0"

# Scheduling & Utils
schedule = "^1.2.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dateutil = "^2.8.0"
cachetools = "^5.3.0"
loguru = "^0.7.0"

# Development
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
radar = "src.radar.cli:main"
screener = "src.screener.cli:main"
scorer = "src.scorer.cli:main"
dashboard = "src.dashboard.app:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "bs4",
    "cachetools",
    "feedparser",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "plotly",
    "plotly.*",
    "requests",
    "yfinance",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.crawler.models.database"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
